Changes made on index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
          <p>This is a basic web page created using HTML.</p>
     </main>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium fugiat vero error voluptate tenetur labore, natus debitis qui? Fugit sequi quos est nobis ex temporibus facilis ipsa expedita obcaecati doloribus.</p>
     <footer>
         <p>&copy; 2023 My Web Page</p>
     </footer>
